# lobster

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  hotfix.md
.github/workflows/: tests.yml
backend/references/: exercises_reference.xlsx  ~$exercises_reference.xlsx
backend/src/: agent_orchestrator.py  analyzer.py  assessment_loader.py  assessment_schema_agent.py  audit_logger.py  cleaner.py  cli.py  clinical_writer_agent.py  cohort_analyzer.py  cost_estimator.py  data_validator.py  detector.py  exercise_extractor.py  exporter.py  language_detector.py  logger.py  main.py  pipeline.py  prompt_cache.py  publication_agent.py  reader.py  reference_loader.py  report_exporter.py  report_figures.py  reporter.py  reviewer_agent.py  statistical_analyzer.py  stats_figures.py  stats_writer_agent.py  synthesis_agent.py
backend/templates/: template_patient.xlsx
backend/tests/: test_analyzer.py  test_assessment_loader.py  test_assessment_schema_agent.py  test_audit_logger.py  test_cleaner.py  test_cli.py  test_cohort_analyzer.py  test_cost_estimator.py  test_data_validator.py  test_detector.py  test_exercise_extractor.py  test_integration_orchestrator.py  test_language_detector.py  test_parallelism.py  test_pipeline.py  test_prompt_cache.py  test_report_exporter.py  test_report_figures.py  test_reporter.py  test_reviewer_agent.py  test_statistical_analyzer.py  test_stats_figures.py  test_synthesis_agent.py
backend/tests/test_files/: Bilan spasticité.docx  Données case report REGRASP copie 2.xlsx  data.csv  data.xlsx  data_nested.json  fake_csv.csv  test_assessments.xlsx  test_patient.xlsx
