[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lobster"
version = "0.3.0a1"
description = "Data Transforming Made Easy — an open source ETL tool for researchers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["etl", "data", "cleaning", "research", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas",
    "chardet",
    "openpyxl",
    "pyarrow",
    "duckdb",
    "pymongo",
    "sqlalchemy",
    "psycopg2-binary",
    "pymysql",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
lobster = "backend.src.cli:cli"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
