[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lobster"
version = "0.4.1a1"
description = "Data Transforming Made Easy — an open source ETL tool for researchers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["etl", "data", "cleaning", "research", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    # Core ETL
    "pandas",
    "chardet",
    "openpyxl",
    "pyarrow",
    # Export targets
    "duckdb",
    "pymongo",
    "sqlalchemy",
    "psycopg2-binary",
    "pymysql",
    # CLI
    "click",
    # AI providers
    "mistralai",
    "anthropic",
    "python-dotenv",
    # Report generation (figures + .pdf/.docx export)
    "matplotlib",
    "python-docx",
    "fpdf2",
    # Clinical report language detection
    "langdetect",
    # Deterministic statistical engine (assessments)
    "scipy",
    "statsmodels",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
lobster = "backend.src.cli:cli"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
